--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1"
   },
   "dependencies": {
